# DiskDominator-Windows

./: .gitignore  ADMIN-INSTALL-MINGW.bat  BUILD-DISKDOMINATOR-FIXED.hta  BUILD-DISKDOMINATOR.bat  BUILD-DISKDOMINATOR.hta  BUILD-FINAL.ps1  BUILD-FIXED.ps1  BUILD-INSTRUCTIONS.md  BUILD-NOW.ps1  BUILD-TAURI-WINDOWS.bat  BUILD-WINDOWS.ps1  BUILD-WITH-LOG.ps1  BUILD-WITH-VS.bat  BUILD_SUCCESS.md  CHANGELOG.md  CHECK-BUILD-LOG.ps1  CLAUDE.md  COMPILAR-AHORA-WINDOWS.md  COMPILAR-WINDOWS.md  COPY-EXCLUDE.txt  CREAR_DISTRIBUCION_WINDOWS.sh  Cargo.toml  DIAGNOSE-BUILD.bat  DOWNLOAD-MINGW.ps1  DiskDominator-Debug.hta  DiskDominator-Final.hta  DiskDominator-Fixed.hta  DiskDominator-Launcher.bat  DiskDominator.bat  DiskDominator.hta  EJECUTABLE-LISTO.md  ESTADO_ACTUAL.md  ESTADO_FINAL.md  ESTADO_PROYECTO_ACTUAL.md  FASE5_COMPLETADA.md  FINAL-BUILD-WINDOWS.bat  FIX-DLLTOOL.bat  FIX-NETWORK-ACCESS.bat  FIX-RUST-BUILD.ps1  FIX-RUST-TOOLCHAIN.ps1  (+53 more)
.github/workflows/: ci.yml
OBSOLETE/: setup-port-forwarding.ps1
app/: globals.css
build-scripts/: build-log.txt  build-native-windows.bat  build-windows-final.sh  build-windows-simple.bat  build-windows.sh  create-real-exe.js  test-windows.bat  test-windows.ps1
components/: color-filter-manager.tsx  color-filter-test.tsx  color-filters.tsx  context-menu.tsx  contrast-manager.tsx  contrast-test.tsx  disk-dominator-v2-fixed.tsx  disk-dominator-v2.tsx  disk-selector.tsx  enhanced-file-explorer.tsx  file-context-menu.tsx  file-explorer.tsx  file-operation-dialog.tsx  file-properties-dialog.tsx  fixed-user-menu.tsx  main-tab.tsx  readability-provider.tsx  tab-navigation.tsx  theme-provider.tsx  user-menu.tsx  user-profile-button.tsx
components/layouts/: view-layout.tsx
components/providers/: ai-assistant-provider.tsx
components/shared/: ai-assistant.tsx
components/ui/: accordion.tsx  alert-dialog.tsx  alert.tsx  aspect-ratio.tsx  avatar.tsx  badge.tsx  breadcrumb.tsx  button.tsx  calendar.tsx  card.tsx  carousel.tsx  chart.tsx  checkbox.tsx  collapsible.tsx  command.tsx  context-menu.tsx  dialog.tsx  drawer.tsx  dropdown-menu.tsx  form.tsx  hover-card.tsx  input-otp.tsx  input.tsx  label.tsx  menubar.tsx  navigation-menu.tsx  pagination.tsx  popover.tsx  progress.tsx  radio-group.tsx  resizable.tsx  scroll-area.tsx  select.tsx  separator.tsx  sheet.tsx  sidebar.tsx  skeleton.tsx  slider.tsx  sonner.tsx  switch.tsx  (+9 more)
components/views/: big-files-view.tsx  disk-status-view.tsx  duplicates-view.tsx  home-view.tsx  organize-view.tsx
convex/_generated/: api.tsx
core-modules/ai-module/: Cargo.toml
core-modules/ai-module/src/: lib.rs  providers.rs
core-modules/ai-module/src/providers/: claude.rs  mod.rs  ollama.rs  openai.rs
core-modules/auth-module/: Cargo.toml
core-modules/i18n-module/: Cargo.toml
core-modules/logger-module/: Cargo.toml
core-modules/storage-module/: Cargo.toml
core-modules/storage-module/src/: cache.rs  lib.rs
core-modules/ui-components/: Cargo.toml
core-modules/update-module/: Cargo.toml
core-modules/update-module/src/: lib.rs
docs/: API.md  MODULOS-IMPLEMENTADOS.md  PLAN-IMPLEMENTACION-FRONTEND-TO-BACKEND.md  TESTING-GUIDE.md  analizador.md  analyzer-implementation-complete.md  archivos-gigantes.md  boton-usuario.md  config.example.toml  duplicados.md  duplicates-implementation.md  home-module-implementation.md  inicio.md  ordenar-disco.md  user-module-implementation.md
docs/architecture/: arquitectura-suite-modular.md  estrategia-suite-resumen.md  informe-rust-tauri-integracion.md
docs/development/: IMPLEMENTATION-COMPLETE.md  PROYECTO-COMPLETO.md  README-MODULAR.md  WINDOWS-BUILD-INSTRUCTIONS-2025.md  WINDOWS-BUILD-SOLUTION.md  WINDOWS-EXECUTABLE-SUCCESS.md  WINDOWS-TEST-INSTRUCTIONS.md  bitacora-limpieza.md  informe-limpieza-archivos.md  (+1 more)
hooks/: use-file-operations.ts  use-tauri-events.ts  use-tauri.ts
icons/: icon.icns
installer/: DiskDominator.iss
lib/: duplicate-detection.ts
public/: hola.html
scripts/: build-all-windows.sh  build-windows-simple.sh  build-windows.sh  cleanup.sh  create-windows-icons.sh  dev.sh  setup.sh  start-automation.sh  test-modules.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: app_state.rs  app_state_v2.rs  error.rs  events.rs  lib.rs  logging.rs  main-complex.rs  main.rs  mft_scanner.rs  mft_scanner_complex.rs  websocket.rs
src-tauri/src/commands/: ai_commands.rs  auth_commands.rs  disk_analyzer_commands.rs  duplicate_commands.rs  file_commands.rs  home_commands.rs  i18n_commands.rs  large_files_commands.rs  mod.rs  organize_commands.rs  update_commands.rs  user_commands.rs
src-tauri/src/disk_analyzer/: mod.rs
src-tauri/src/file_system/: mod.rs  tests.rs.bak
src-tauri/src/tests/: disk_analyzer_tests.rs  home_commands_tests.rs  mod.rs  simple_test.rs
src-tauri/tests/: command_tests.rs  integration_test.rs  integration_tests.rs  mft_tests.rs
suite-core/: tsconfig.base.json
tests/: run-all-tests.sh  run-tests.sh  setup.ts  simple.test.ts
windows-launchers/: README.md  WINDOWS-EXECUTABLE-READY.md  WINDOWS-INSTRUCTIONS.md  WINDOWS-LAUNCH-INSTRUCTIONS.md
(+109 files in other folders)
