[package]
name = "disk-dominator"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["fs-all", "path-all", "os-all", "shell-open", "window-all", "dialog-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2.5"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
winapi = { version = "0.3", features = ["fileapi", "winnt"], optional = true }

[features]
default = ["custom-protocol", "windows"]
custom-protocol = ["tauri/custom-protocol"]
windows = ["winapi"]
