[package]
name = "disk-dominator"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "disk-dominator"
path = "src/main.rs"

[lib]
name = "disk_dominator"
path = "src/lib.rs"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["fs-all", "path-all", "os-all", "shell-open", "window-all", "dialog-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2.5"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
sha2 = "0.10"
winapi = { version = "0.3", features = ["fileapi", "winnt"], optional = true }
zip = "0.6"
tar = "0.4"
flate2 = "1.0"
md5 = "0.7"
tokio-tungstenite = "0.20"
futures-util = "0.3"
rayon = "1.8"

[features]
default = ["custom-protocol", "windows"]
custom-protocol = ["tauri/custom-protocol"]
windows = ["winapi"]

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["fileapi", "winnt", "handleapi", "ioapiset", "winioctl", "processthreadsapi", "winbase", "synchapi"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"
mockall = "0.11"
proptest = "1.0"
serde_json = "1.0"

[[test]]
name = "integration_tests"
path = "tests/integration_tests.rs"

[[test]]
name = "mft_tests" 
path = "tests/mft_tests.rs"

[[test]]
name = "command_tests"
path = "tests/command_tests.rs"
