[package]
name = "storage_module"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
chrono.workspace = true
tokio.workspace = true
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }
directories = "5.0"
